[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-tracker-cli"
version = "1.0.0"
description = "A CLI task tracker"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Kristia Kanchev"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
task-tracker = "task_tracker.cli:main"

[project.urls]
Homepage = "https://github.com/kristianfzr/task-tracker"